✨ Discord Bot Plays Music Now